--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pandas>=1.3.0
-numpy>=1.21.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-openpyxl>=3.0.0
-pytest>=7.0.0
+pandas==2.1.0
+numpy==1.25.2
+matplotlib==3.7.2
+seaborn==0.12.2
+scikit-learn==1.3.0
+scipy==1.11.2
+jupyterlab==4.0.5
+notebook==7.0.3
+statsmodels==0.14.0
